# memcachetest

./: Makefile.am  configure.ac  libmemc.c  libmemc.h  main.c  metrics.c  metrics.h  timer.c  vbucket.c
config/: version.pl
m4/: couchbase.m4
